# solana-sandbox

./: .gitignore  README.md
anchordemo/: .gitignore  Anchor.toml  Solana.md
anchordemo/app/: callProgram.ts  checkAccount.ts  codamaIDL.json  createCodamaIDL.ts  generateCode.ts  package.json  pnpm-lock.yaml  tsconfig.json
anchordemo/app/keys/: AnkpTFgp1wzTCZHU7kxQTsit4zQZuqpY4cDzgS5bQnCc.json
anchordemo/programs/anchordemo/: Cargo.toml
anchordemo/tests/: anchordemo.ts
cfg/: Cargo.toml  README.md  dev.md
cfg/src/: main.rs
counter/: Anchor.toml
counter/app/counter-rs/: Cargo.toml
cpi-demo/: .gitignore  Anchor.toml
cpi-demo/programs/cpi-demo/: Cargo.toml
cpi-demo/tests/: cpi-demo.ts
create-mint-account/: Anchor.toml  package.json
create-mint-account/programs/create-mint-account/: Cargo.toml
create-mint-account/tests/: create-mint-account.ts
crowdfunding_redpacket/: .gitignore  Anchor.toml  README.md  package.json
crowdfunding_redpacket/app/idls/: crowdfunding_redpacket.json
crowdfunding_redpacket/docs/: crowdfunding_redpacket.md  dev.md  readme.md
crowdfunding_redpacket/mochawesome-report/: mochawesome.html  mochawesome.json
crowdfunding_redpacket/programs/crowdfunding_redpacket/: Cargo.toml
crowdfunding_redpacket/tests/: crowdfunding_redpacket.ts
generate_a_signer/: package.json
generate_a_signer/src/: client.ts  index.ts
get_wallet_account/: .env  .gitignore  package.json  pnpm-lock.yaml
get_wallet_account/src/: client.ts  fetch_account.ts  get_balance.ts  index.ts
hello_anchor/: .gitignore  Anchor.toml
hello_anchor/programs/hello_anchor/: Cargo.toml
hello_anchor/tests/: hello_anchor.ts
my-program/: Anchor.toml
my-program/programs/my-program/: Cargo.toml
my-program/tests/: my-program.ts
programs/red_packet/: Cargo.toml
programs/red_packet/src/: config.rs  errors.rs  events.rs  lib.rs  states.rs  utils.rs
programs/red_packet/src/instructions/: claim.rs  create.rs  expiry.rs  initialize.rs  mod.rs  refund.rs
send-sol-demo/: .gitignore  Cargo.toml  README.md
send-sol-demo/src/: main.rs
sol-guess/: .gitignore  Anchor.toml  package.json
sol-guess/programs/sol-guess/: Cargo.toml
sol-guess/tests/: sol-guess.ts
sol-program/: .gitignore  Cargo.toml
sol-program/examples/: client.rs  event.rs
sol-program/keys/: SSoyAkBN9E3CjbWpr2SdgLa6Ejbqqdvasuxd8j1YsmN.json
sol-program/src/: lib.rs  lib2.rs
sol-swap/: .gitignore  Anchor.toml  pnpm-lock.yaml
sol-swap/programs/sol-swap/: Cargo.toml
sol-swap/tests/: sol-swap.ts
solana-create-account/: .gitignore  Cargo.toml
solana-create-account/src/: main.rs
solana-data-demo/: .env  Cargo.toml
solana-data-demo/idls/: red_packet.json
solana-data-demo/src/: main.rs
solana-demo/: .gitignore  address.ts  development_notes.md  my-keypair.json  package.json  pnpm-lock.yaml  solana_transfer.ts  transfer.ts
solana-nft-mintcraft/: .gitignore  Anchor.toml
solana-nft-mintcraft/tests/: solana-nft-mintcraft.ts
solana-raw-tx/: .gitignore  Readme.md  package.json  pnpm-lock.yaml  tsconfig.json  withGill.ts
solana-sdk-demo/: Cargo.toml
solana-sdk-demo/src/: main.rs
solana_event_log_parse/: event.py  event2.py  main.py  mint_program.json  pyproject.toml  red_packet.json
solfeecalc/: .gitignore  Cargo.toml
solfeecalc/src/: main.rs
(+35 files in other folders)
