cargo-features = ["edition2024"]

[package]
name = "sol-program"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[[example]]
name = "event"
path = "examples/event.rs"

[[example]]
name = "client"
path = "examples/client.rs"

[dependencies]
anyhow = "1.0.98"
borsh = "1.5.7"
borsh-derive = "1.5.7"
dotenvy = "0.15.7"
reqwest = { version = "0.12.20", features = ["json"] }
serde_json = { version = "1.0.140", features = ["default"] }
solana-account-info = "2.2.1"
solana-msg = "2.2.1"
solana-program-entrypoint = "2.2.1"
solana-program-error = "2.2.2"
solana-pubkey = "2.2.1"

# solana-program = "2.2.1"

[dev-dependencies]
solana-client = "2.2.7"
solana-native-token = "2.2.1"
solana-program-test = "2.2.7"
solana-sdk = "2.2.2"
tokio = "1.45.1"
