[package]
name = "solana-data-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
spl-token-2022 = { version = "9.0.0", features = [
    "no-entrypoint",
    "serde-traits",
] }
solana-client = "2.2.7"
solana-program = "2"
solana-transaction-status-client-types = "2.2.7"
solana-sdk = "2.2.2"
anchor-client = { version = "0.31.1", features = ["async"] }
anchor-lang = "0.31.1"
spl-token-metadata-interface = "0.7.0"
spl-token = "8.0.0"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
anyhow = "1.0"
futures-util = "0.3.31"
mpl-token-metadata = "5.1.0"
borsh = "1.5.7"
dotenvy = "0.15.7"
